--- a/app/templates/ProductionOrderprogress.html
+++ b/app/templates/ProductionOrderprogress.html
@@ -43,6 +43,7 @@
             <th>ProductCode</th>
             <th>Category</th>
             <th>Quantity</th>
+            <th>Assigend to</th>
             <th></th>
         </tr>
     </thead>
@@ -52,6 +53,11 @@
             <td>{{ row["ProductCode"] }}</td>
             <td>{{ row["Category"] }}</td>
             <td>{{ row["QuantityCompleted"] }}/{{ row["QuantityRequired"] }} ({{(row["QuantityRequired"]/order["Quantity"])|int}}pcs foreach)</td>
+            {% if row['Category'] == "Subassembly" and row['childOrderID']%}
+                <td>{% if row.AssignedUser is none or row.AssignedUser == "" %}EVERYBODY{% else %}{{ row.AssignedUser }}{% endif %}</td>
+            {% else %}
+                <td>-</td>
+            {% endif %}
             <td>
                 <a href="{{ url_for('progress.increase_ProductionOrderProgress', ProgressID=row['ProgressID'], OrderID=order['OrderID']) }}" class="btn btn-success btn-sm">+</a>
                 <a href="{{ url_for('progress.decrease_ProductionOrderProgress', ProgressID=row['ProgressID'], OrderID=order['OrderID']) }}" class="btn btn-danger btn-sm">-</a>
