--- a/app/templates/ProductionOrderprogress.html
+++ b/app/templates/ProductionOrderprogress.html
@@ -19,7 +19,7 @@
                 <span><i class="mdi mdi-check"></i></span>
             </div>
         </div>
-    </div>    
+    </div>
     <div class="row mb-3">
         <div class="col-2">
             <img class="rounded" src="{{ order['image'] }}" width="100%" />
@@ -37,9 +37,11 @@
 <a href="{{ url_for('production.decrease_ProductionOrder', OrderID=order['OrderID']) }}" class="btn btn-danger mb-3">-</a>
 <a href="{{ url_for('production.ongoing_ProductionOrder', OrderID=order['OrderID'])}}" class="btn btn-primary mb-3">Mark as On going</a>
 <a href="{{ url_for('production.complete_ProductionOrder', OrderID=order['OrderID'])}}" class="btn btn-primary mb-3">Mark as Complete</a>
+<a href="{{ url_for('production.addAllSub_ProductionOrder', OrderID=order['OrderID'])}}" class="btn btn-warning mb-3">Create ALL sub production order</a>
 <table id="ProductionOrderTable" class="table table-striped">
     <thead>
         <tr>
+            <th></th>
             <th>ProductCode</th>
             <th>Category</th>
             <th>Quantity</th>
@@ -50,13 +52,14 @@
     <tbody>
         {% for row in data %}
         <tr>
+            <td><img class="rounded" src="{{ row['image'] }}" width="64" /></td>
             <td>{{ row["ProductCode"] }}</td>
             <td>{{ row["Category"] }}</td>
             <td>{{ row["QuantityCompleted"] }}/{{ row["QuantityRequired"] }} ({{(row["QuantityRequired"]/order["Quantity"])|int}}pcs foreach)</td>
             {% if row['Category'] == "Subassembly" and row['childOrderID']%}
-                <td>{% if row.AssignedUser is none or row.AssignedUser == "" %}EVERYBODY{% else %}{{ row.AssignedUser }}{% endif %}</td>
+            <td>{% if row.AssignedUser is none or row.AssignedUser == "" %}EVERYBODY{% else %}{{ row.AssignedUser }}{% endif %}</td>
             {% else %}
-                <td>-</td>
+            <td>-</td>
             {% endif %}
             <td>
                 <a href="{{ url_for('progress.increase_ProductionOrderProgress', ProgressID=row['ProgressID'], OrderID=order['OrderID']) }}" class="btn btn-success btn-sm">+</a>
@@ -65,7 +68,7 @@
                 {% if row['childOrderID'] %}
                 <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row['childOrderID']) }}" class="btn btn-primary btn-sm">View Production order</a>
                 {% else %}
-                <a href="{{ url_for('production.add_ProductionOrder', date=current_date, code=row['ProductCode'], quantity=(row['QuantityRequired'] - row['QuantityCompleted']), parentOrderID=order['OrderID']) }}" class="btn btn-primary btn-sm">Add Production order</a>
+                <a href="{{ url_for('production.add_ProductionOrder', date=current_date, code=row['ProductCode'], quantity=(row['QuantityRequired'] - row['QuantityCompleted']), parentOrderID=order['OrderID'], status=order['Status']) }}" class="btn btn-primary btn-sm add-productionorder">Add Production order</a>
                 {% endif %}
                 {% endif %}
             </td>
