--- a/app/templates/ProductionOrder.html
+++ b/app/templates/ProductionOrder.html
@@ -28,10 +28,41 @@
             <td>{{ row["Status"] }}</td>
             <td>{% if row.AssignedUser is none or row.AssignedUser == "" %}EVERYBODY{% else %}{{ row.AssignedUser }}{% endif %}</td>
             <td>
-                <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row['OrderID']) }}"
-                    class="btn btn-info btn-sm">View</a>
-                <a href="{{ url_for('production.delete_ProductionOrder', OrderID=row['OrderID']) }}"
-                    class="btn btn-danger btn-sm" onclick="return confirmDelete()">delete</a>
+                <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row['OrderID']) }}" class="btn btn-info btn-sm">View</a>
+                <a href="{{ url_for('production.delete_ProductionOrder', OrderID=row['OrderID']) }}" class="btn btn-danger btn-sm" onclick="return confirmDelete()">delete</a>
+            </td>
+        </tr>
+        {% endif %}
+        {% endfor %}
+    </tbody>
+</table>
+
+<h3 class="text-center m-3">Sub orders</h3>
+<table id="ProductionOrderTable" class="table table-striped">
+    <thead>
+        <tr>
+            <th></th>
+            <th>Product code</th>
+            <th>Date</th>
+            <th>Quantity</th>
+            <th>Status</th>
+            <th>Assigend to</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for row in data %}
+        {% if row["Status"]!="Complete" and row["ParentOrderID"]!="" %}
+        <tr>
+            <td><img class="rounded" src="{{ row['image'] }}" width="64" /></td>
+            <td>{{ row["ProductCode"] }}</td>
+            <td>{{ row["OrderDate"] }}</td>
+            <td>{{ row["QuantityCompleted"] }}/{{ row["Quantity"] }}</td>
+            <td>{{ row["Status"] }}</td>
+            <td>{% if row.AssignedUser is none or row.AssignedUser == "" %}EVERYBODY{% else %}{{ row.AssignedUser }}{% endif %}</td>
+            <td>
+                <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row['OrderID']) }}" class="btn btn-info btn-sm">View</a>
+                <a href="{{ url_for('production.delete_ProductionOrder', OrderID=row['OrderID']) }}" class="btn btn-danger btn-sm" onclick="return confirmDelete()">delete</a>
             </td>
         </tr>
         {% endif %}
@@ -40,52 +71,16 @@
 </table>
 
 <p class="mt-3">
-    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#suborder" role="button" aria-expanded="false"
-        aria-controls="suborder">
+    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#suborder" role="button" aria-expanded="false" aria-controls="suborder">
         Suborders
     </a>
-    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseArchive" role="button" aria-expanded="false"
-        aria-controls="collapseArchive">
+    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseArchive" role="button" aria-expanded="false" aria-controls="collapseArchive">
         Archive
     </a>
 </p>
 
-<div class="collapse mb-3" id="suborder">
-    <h2 class="text-center my-3">Sub orders</h2>
-    <table id="ProductionOrderTable" class="table table-striped">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Product code</th>
-                <th>Date</th>
-                <th>Quantity</th>
-                <th>Status</th>
-                <th>Assigend to</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for row in data %}
-            {% if row["Status"]!="Complete" and row["ParentOrderID"]!="" %}
-            <tr>
-                <td><img class="rounded" src="{{ row['image'] }}" width="64" /></td>
-                <td>{{ row["ProductCode"] }}</td>
-                <td>{{ row["OrderDate"] }}</td>
-                <td>{{ row["QuantityCompleted"] }}/{{ row["Quantity"] }}</td>
-                <td>{{ row["Status"] }}</td>
-                <td>{% if row.AssignedUser is none or row.AssignedUser == "" %}EVERYBODY{% else %}{{ row.AssignedUser }}{% endif %}</td>
-                <td>
-                    <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row['OrderID']) }}"
-                        class="btn btn-info btn-sm">View</a>
-                    <a href="{{ url_for('production.delete_ProductionOrder', OrderID=row['OrderID']) }}"
-                        class="btn btn-danger btn-sm" onclick="return confirmDelete()">delete</a>
-                </td>
-            </tr>
-            {% endif %}
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+
+
 
 <div class="collapse mb-3" id="collapseArchive">
     <h2 class="text-center my-3">Completed production orders</h2>
@@ -110,8 +105,7 @@
                 <td>{{ row["QuantityCompleted"] }}/{{ row["Quantity"] }}</td>
                 <td>{{ row["Status"] }}</td>
                 <td>
-                    <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row['OrderID']) }}"
-                        class="btn btn-info btn-sm">View</a>
+                    <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row['OrderID']) }}" class="btn btn-info btn-sm">View</a>
                 </td>
             </tr>
             {% endif %}
