--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
                         <i class="mdi mdi-package-variant-closed"></i>
                     </div>
                     <h2 class="card-title mb-3">{{ productProductionOrder }}</h2>
-                    <p class="card-text text-muted">Product Production Order</p>
+                    <p class="card-text text-muted">Production order</p>
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
                         <i class="mdi mdi-cog"></i>
                     </div>
                     <h2 class="card-title mb-3">{{ subassemblyProductionOrder }}</h2>
-                    <p class="card-text text-muted">Subassembly Production Order</p>
+                    <p class="card-text text-muted">Subassembly order</p>
                 </div>
             </div>
         </div>
